--- a/src/app/component/tables/tables.component.html
+++ b/src/app/component/tables/tables.component.html
@@ -22,27 +22,30 @@
           <th>Salary</th>
         </tr>
         </thead>
-        <tfoot>
-        <tr>
-          <th>Name</th>
-          <th>Position</th>
-          <th>Office</th>
-          <th>Age</th>
-          <th>Start date</th>
-          <th>Salary</th>
-        </tr>
-        </tfoot>
         <tbody>
-        <tr>
-          <td>Tiger Nixon</td>
-          <td>System Architect</td>
-          <td>Edinburgh</td>
-          <td>61</td>
-          <td>2011/04/25</td>
-          <td>$320,800</td>
+        <tr *ngFor="let e of employee | paginate: { itemsPerPage: pageSize, currentPage: page, totalItems: count}; let i = index">
+          <td>{{ e.name }}</td>
+          <td>{{ e.position }}</td>
+          <td>{{ e.office}}</td>
+          <td>{{ e.age }}</td>
+          <td>{{ e.time }}</td>
+          <td>{{ e.salary }}</td>
         </tr>
         </tbody>
       </table>
+      <div class="d-flex flex-row-reverse">
+        <div class="col-lg-4 d-flex justify-content-end align-items-center">
+          <span style="font-size: 14px; line-height: 16px">Số lượng hiển thị/Trang :  </span>
+          <div>
+            <select style="font-size: 14px; line-height: 16px" (change)="handlePageSizeChange($event)">
+              <option *ngFor="let size of pageSizes" [ngValue]="size">
+                {{ size }}
+              </option>
+            </select>
+          </div>
+        </div>
+        <pagination-controls (pageChange)="handlePageChange($event)"></pagination-controls>
+      </div>
     </div>
   </div>
 </div>
