--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -124,7 +124,12 @@
       <!-- Card Body -->
       <div class="card-body">
         <div class="chart-area">
-          <canvas id="myAreaChart"></canvas>
+          <canvas baseChart width="100%" height="30%"
+                  [type]="'line'"
+                  [data]="lineChartData"
+                  [options]="lineChartOptions"
+                  [legend]="lineChartLegend">
+          </canvas>
         </div>
       </div>
     </div>
@@ -155,18 +160,24 @@
       <!-- Card Body -->
       <div class="card-body">
         <div class="chart-pie pt-4 pb-2">
-          <canvas id="myPieChart"></canvas>
+          <canvas baseChart
+                  [labels]="doughnutChartLabels"
+                  [datasets]="doughnutChartDatasets"
+                  [options]="doughnutChartOptions"
+                  [legend]="false"
+                  [type]="'doughnut'">
+          </canvas>
         </div>
         <div class="mt-4 text-center small">
-                                        <span class="mr-2">
-                                            <i class="fas fa-circle text-primary"></i> Direct
-                                        </span>
           <span class="mr-2">
-                                            <i class="fas fa-circle text-success"></i> Social
-                                        </span>
+              <i class="fas fa-circle text-primary"></i> Direct
+          </span>
           <span class="mr-2">
-                                            <i class="fas fa-circle text-info"></i> Referral
-                                        </span>
+              <i class="fas fa-circle text-success"></i> Social
+          </span>
+          <span class="mr-2">
+              <i class="fas fa-circle text-info"></i> Referral
+          </span>
         </div>
       </div>
     </div>
