--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -3,8 +3,8 @@
   <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" routerLink="/admin/dashboard">
-      <div class="sidebar-brand-icon rotate-n-15">
+    <a class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom" routerLink="/admin/dashboard">
+      <div class="fs-5 fw-semibold">
         <i class="fas fa-laugh-wink"></i>
       </div>
       <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
@@ -35,11 +35,11 @@
         <i class="fas fa-fw fa-cog"></i>
         <span>Components</span>
       </a>
-      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+      <div id="collapseTwo" class="collapsed" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
         <div class="bg-white py-2 collapse-inner rounded">
-          <h6 class="collapse-header">Custom Components:</h6>
-          <a class="collapse-item" routerLink="/admin/component/button">Buttons</a>
-          <a class="collapse-item" routerLink="/admin/component/card">Cards</a>
+          <h6 class="collapsed">Custom Components:</h6>
+          <a class="collapse-horizontal" routerLink="/admin/component/button">Buttons</a>
+          <a class="collapse-horizontal" routerLink="/admin/component/card">Cards</a>
         </div>
       </div>
     </li>
@@ -303,7 +303,7 @@
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
-              <img class="img-profile rounded-circle"
+              <img alt="" class="img-profile rounded-circle"
                    src="./assets/img/undraw_profile.svg">
             </a>
             <!-- Dropdown - User Information -->
